--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,8 @@
 .customNav {
     position: fixed;
     width: 100%;
-    background: url("../images/transparency.png");
-    background-color: transparent !important;
+    /*background: url("../Images/transparency.png")*/
+    background-color: black !important;
     background-size: cover;
     z-index: 10;
   }
