--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,11 +49,12 @@
 
 .projects {
   background-color:aquamarine;
+  border: solid 2px black;
 }
 
-.Work {
-    padding: 0px 30px 30px 30px;
-  }
+.container-fluid {
+  margin-top: 0px !important;
+}
 
 .cardContainer {
     text-align: center;
@@ -91,7 +92,7 @@
   }
 
 #contact {
-    margin: 20px;
+    margin: 20px auto;
     border-style: solid;
     border-width: medium;
     border-color: black;
